Fix #144: Brighter success color on dark themes for better contrast.

--- a/assets/styles/themes/_dark.scss
+++ b/assets/styles/themes/_dark.scss
@@ -28,7 +28,7 @@
   --kbin-primary-color: #3c3c3c;
   --kbin-text-muted-color: #95a6a6;
 
-  --kbin-success-color: #0f5132;
+  --kbin-success-color: #24b270;
   --kbin-danger-color: #dc2f3f;
 
   // section
